优化：配置跨域、请求参数（字符串-布尔值）转换
