# src/to-do/to-do.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Delete, Get, Param, Patch, Post } from '@nestjs/common';
+import { Body, Controller, Delete, Get, Param, Patch, Post, Query } from '@nestjs/common';
 import { ToDoService } from './to-do.service';
 import { ToDoList } from './entities/to-do-list.entity';
 import { PatchListDto } from './dto/patch-list.dto';
@@ -7,7 +7,7 @@ import { DeleteItemDto } from './dto/delete-item.dto';
 import { PostItemDto } from './dto/post-item.dto';
 import { GetItemsDto } from './dto/get-items.dto';
 import { PostListDto } from './dto/post-list.dto';
-import { ApiBody, ApiOperation, ApiProperty, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { ApiBody, ApiOperation, ApiProperty, ApiQuery, ApiResponse, ApiTags } from '@nestjs/swagger';
 import { ToDoItem } from './entities/to-do-item.entity';
 
 @ApiTags('ToDo')
@@ -51,10 +51,10 @@ export class ToDoController {
     }
 
     @ApiOperation({ summary: '获取列表下的待办项' })
-    @ApiBody({ type: GetItemsDto })
+    @ApiQuery({ type: GetItemsDto })
     @ApiResponse({ type: ToDoItem, isArray: true })
     @Get('/items')
-    public getItems(@Body() getItemsDto: GetItemsDto): Promise<ToDoItem[]> {
+    public getItems(@Query() getItemsDto: GetItemsDto): Promise<ToDoItem[]> {
         return this.toDoService.getItems(getItemsDto)
     }
 
